[project]
name = "hacking4humanity-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "sara-kelemen",email = "skk264@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "instaloader (>=4.14.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
instaloader = {allow-prereleases = true}
